--- a/src/app/dashboard/milestone/milestone-list.component.css
+++ b/src/app/dashboard/milestone/milestone-list.component.css
@@ -4,6 +4,11 @@
   margin-top: 1rem;
 }
 
+.milestoneBtn {
+  width: 90%;
+  margin-top: 1rem;
+}
+
 .example-section {
   display: flex;
   align-content: center;
