milestone now showing weekdays

--- a/src/app/dashboard/milestone/milestone-list.component.html
+++ b/src/app/dashboard/milestone/milestone-list.component.html
@@ -4,9 +4,9 @@
     <div>
       <div mat-card-avatar class="example-header-image"></div>
       <p>Milestone title: {{ms.name}}</p>
-      <p>{{ms.days}}</p>
       <p>start: {{ms.startDate | date}}</p>
       <p>end: {{ms.endDate | date}}</p>
+      <p>date: {{ms.days}}</p>
     </div>
     <div>
       <section class="example-section">
