--- a/src/app/dashboard/sideboard/sideboard.component.html
+++ b/src/app/dashboard/sideboard/sideboard.component.html
@@ -1,16 +1,13 @@
 <div id="pannel">
-  <div class="btnContainer">
-    <div class="milestone">Milestone1</div>
+  <mat-list *ngFor="let ms of msStoreList" >
+  <div class="btnContainer" *ngIf="ms.shouldDo === true">
+    <div class="milestone">
+      {{ms.name}}
+    </div>
     <div class="checkBtn">
       <button mat-mini-fab class="yesBtn">Yes</button>
           <button mat-mini-fab class="noBtn">No</button>
     </div>
   </div>
-  <div class="btnContainer">
-    <div class="milestone">Milestone2</div>
-    <div class="checkBtn">
-      <button mat-mini-fab class="yesBtn">Yes</button>
-      <button mat-mini-fab class="noBtn">No</button>
-    </div>
-  </div>
+  </mat-list>
 </div>
