--- a/src/app/dashboard/calendar/calendar.component.css
+++ b/src/app/dashboard/calendar/calendar.component.css
@@ -22,7 +22,7 @@ body {font-family: Verdana, sans-serif;}
 .month {
     padding: 70px 25px;
     width: 100%;
-    background: #1abc9c;
+    background: Darkgrey;
     text-align: center;
 }
 
