done with checking params

--- a/src/app/newmilestone/newmilestone.component.html
+++ b/src/app/newmilestone/newmilestone.component.html
@@ -30,8 +30,9 @@
     </form>
   </div>
   </div>
-  <div id="rightContainer">
-    placeholder
+  <div id="rightintheputty">
+    <h1>Alert Email</h1>
+    <input mat-input placeholder='right in the putty.exe' [(ngModel)]="email">
   </div>
   </div>
 
