--- a/src/app/dashboard/calendar/calendar.component.html
+++ b/src/app/dashboard/calendar/calendar.component.html
@@ -1,8 +1,8 @@
 <div id="calendar">
   <!--<mat-card class="milestoneInfo">-->
-    <div class="milestoneInfo">
+    <div class="milestoneInfo" [(ngModel)]="displayMilestoneName">
       <p>
-        Days since: days+
+        name: {{displayMilestoneName.name}}
       </p>
       <p>
         Days since: days+
