getting title from the selected milestone from dashboard onto calendar

--- a/src/app/dashboard/calendar/calendar.component.html
+++ b/src/app/dashboard/calendar/calendar.component.html
@@ -1,8 +1,7 @@
 <div id="calendar">
   <!--<mat-card class="milestoneInfo">-->
-    <div class="milestoneInfo" [(ngModel)]="displayMilestoneName">
-      <p>
-        name: {{displayMilestoneName.name}}
+    <div class="milestoneInfo"  *ngIf="calendarMilestone !== null">
+      <p [innerText]="displayMilestoneName">
       </p>
       <p>
         Days since: days+
