fixed input limitation bug and implemented the option button on the milestone

--- a/src/app/dashboard/milestone/milestone-list.component.html
+++ b/src/app/dashboard/milestone/milestone-list.component.html
@@ -3,7 +3,20 @@
   <button mat-raised-button class="milestoneBtn" (click)="emitMilestone(ms)">
     <div>
       <div mat-card-avatar class="example-header-image"></div>
-      <p>Milestone title: {{ms.name}}</p>
+      
+      <span>Milestone title: {{ms.name}}</span>
+      <button class="milestone-threedot" mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <span>Delete</span>
+        </button>
+        <button mat-menu-item>
+          <span>Edit</span>
+        </button>
+      </mat-menu>
+      
       <p>start: {{ms.startDate | date}}</p>
       <p>end: {{ms.endDate | date}}</p>
       <p>date: {{ms.days}}</p>
