--- a/src/app/dashboard/sideboard/sideboard.component.html
+++ b/src/app/dashboard/sideboard/sideboard.component.html
@@ -1,12 +1,12 @@
 <div id="pannel">
   <mat-list *ngFor="let ms of msStoreList" >
   <div class="btnContainer" *ngIf="ms.shouldDo === true">
-    <div class="milestone">
+    <div class="milestone" id="milestone_box">
       {{ms.name}}
     </div>
     <div class="checkBtn">
-      <button mat-mini-fab class="yesBtn">Yes</button>
-          <button mat-mini-fab class="noBtn">No</button>
+      <button mat-mini-fab class="yesBtn" (click)="complete()">Yes</button>
+          <button mat-mini-fab class="noBtn" (click)="incomplete()">No</button>
     </div>
   </div>
   </mat-list>
