--- a/src/app/dashboard/sideboard/sideboard.component.html
+++ b/src/app/dashboard/sideboard/sideboard.component.html
@@ -5,8 +5,8 @@
       {{ms.name}}
     </div>
     <div class="checkBtn">
-      <button mat-mini-fab class="yesBtn" (click)="complete()">Yes</button>
-          <button mat-mini-fab class="noBtn" (click)="incomplete()">No</button>
+      <button mat-mini-fab id="yes_btn" class="yesBtn" (click)="complete()">Yes</button>
+          <button mat-mini-fab id="no_btn" class="noBtn" (click)="incomplete()">No</button>
     </div>
   </div>
   </mat-list>
