--- a/src/app/newmilestone/newmilestone.component.html
+++ b/src/app/newmilestone/newmilestone.component.html
@@ -30,9 +30,14 @@
     </form>
   </div>
   </div>
-  
-  </div>
 
+  </div>
+  <mat-divider></mat-divider>
+  <div>
+    <h3>Do you want to be alerted via email?</h3>
+      <mat-radio-button [checked]="false">Yes</mat-radio-button>
+      <mat-radio-button [checked]="false">No</mat-radio-button>
+  </div>
   <button mat-button (click)="saveMilestone()">
     save
   </button>
