--- a/src/app/dashboard/milestone/milestone-list.component.html
+++ b/src/app/dashboard/milestone/milestone-list.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-list *ngFor="let ms of msStoreList">
-  <button mat-raised-button class="milestoneBtn" (click)="emitMilestone(ms)">
+  <button mat-raised-button class="milestoneBtn" *ngIf="ms !== null" (click)="emitMilestone(ms)">
     <div>
       <div mat-card-avatar class="example-header-image"></div>
       
@@ -10,10 +10,10 @@
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>
-          <span>Delete</span>
+          <span (click)="deletemilestone(ms)">Delete</span>
         </button>
         <button mat-menu-item>
-          <span>Edit</span>
+          <span (click)="editmilestone(ms)">Edit</span>
         </button>
       </mat-menu>
       
