making range of date active

--- a/src/app/dashboard/calendar/calendar.component.html
+++ b/src/app/dashboard/calendar/calendar.component.html
@@ -62,9 +62,9 @@
         <li><span id="26">26</span></li>
         <li><span id="27">27</span></li>
         <li><span id="28">28</span></li>
-        <li> </li>
-        <li> </li>
-        <li> </li>
+        <li><span id="29"></span></li>
+        <li><span id="30"></span></li>
+        <li><span id="31"></span></li>
       </ul>
     </div>
 </div>
