--- a/src/app/newmilestone/newmilestone.component.html
+++ b/src/app/newmilestone/newmilestone.component.html
@@ -20,7 +20,7 @@
         <mat-form-field>
           <input matInput placeholder="Name of the milestone" [(ngModel)]="title" required>
         </mat-form-field>
-        <p>{{title}}</p>
+        <!-- <p>{{title}}</p> -->
       </div>
 
       <div class="duration">
