logout button modified

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,6 +10,15 @@
   background-color: darkgrey;
 }
 
+.mat-button {
+  float: right;
+  margin-left: 80%;
+  background-color: white;
+  /* border: solid;
+  border-width: 0.1rem;
+  border-color: black; */
+}
+
 #container {
   display: flex;
   width: 100%;
