--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,30 +4,53 @@
   display:block;
 }
 
-/*.form-container {*/
-  /*background: white;*/
-/*//padding: 3.5em;*/
-  /*width: 500px;*/
-  /*margin: auto;*/
-  /*margin-top: 15em;*/
-/*//margin-left: -250px;*/
-/*}*/
+/* .form-container {
+  background: white;
+  padding: 3.5em;
+  width: 500px;
+  margin: auto;
+  margin-top: 15em;
+  margin-left: -250px;
+} */
+
+.whole {
+  background: #ffcccc;
+  width: auto;
+  height: 500px;
+  margin: 0;
+  padding: 0;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+img {
+  width: 45px;
+  height: 45px;
+}
+.title {
+  font-size: 2.7em;
+  margin-bottom: 0;
+}
 
 button {
   padding: 1.2em;
-  width: 100%;
+  width: 55%;
   cursor: pointer;
-  margin-bottom: 15px;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   font-size: 1.3em;
 }
 
 #pwInput {
   padding: 1.2em;
-  width: 100%;
-  cursor: pointer;
-  margin-bottom: 15px;
+  width: 600px;
+  border-radius: 2rem;
+  /* margin-bottom: 15px; */
+  margin: 0 auto;
   font-size: 1.3em;
-  border: 2px solid #000;
+  border: 10px solid #ff9999;
+  text-align: center;
+  background-color: white;
 }
 
 @media (max-width: 600px) {
