milestone-list title more visible

--- a/src/app/dashboard/milestone/milestone-list.component.html
+++ b/src/app/dashboard/milestone/milestone-list.component.html
@@ -3,8 +3,10 @@
   <button mat-raised-button class="milestoneBtn" *ngIf="ms !== null" (click)="emitMilestone(ms)">
     <div>
       <div mat-card-avatar class="example-header-image"></div>
-      
-      <span>Milestone title: {{ms.name}}</span>
+      <div class="ms_name">
+        <h2>{{ms.name}}</h2>
+      </div>
+
       <button class="milestone-threedot" mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
       </button>
@@ -16,7 +18,7 @@
           <span (click)="editmilestone(ms)">Edit</span>
         </button>
       </mat-menu>
-      
+
       <p>start: {{ms.startDate | date}}</p>
       <p>end: {{ms.endDate | date}}</p>
       <p>date: {{ms.days}}</p>
